# ElectronBot

./: README.md
1.Hardware/BaseConnector/: BaseConnector_ASCII.PcbDoc  Main_ASCII.SchDoc
1.Hardware/BaseConnector/Gerber/: BaseConnector-RoundHoles.TXT  BaseConnector-SlotHoles.TXT  BaseConnector-macro.APR_LIB  BaseConnector.DRR  BaseConnector.EXTREP  BaseConnector.GBL  BaseConnector.GBO  BaseConnector.GBP  BaseConnector.GBS  BaseConnector.GD1  BaseConnector.GG1  BaseConnector.GKO  BaseConnector.GM1  BaseConnector.GM10  BaseConnector.GM13  BaseConnector.GM14  BaseConnector.GM15  BaseConnector.GPB  BaseConnector.GPT  BaseConnector.GTL  BaseConnector.GTO  BaseConnector.GTP  BaseConnector.GTS  BaseConnector.LDP  BaseConnector.REP  BaseConnector.RUL  BaseConnector.apr  Status Report.Txt
1.Hardware/ElectronBot/: ElectronBot_ASCII.PcbDoc  Main_ASCII.SchDoc
1.Hardware/ElectronBot/Gerber/: ElectronBot-macro.APR_LIB  ElectronBot.DRR  ElectronBot.EXTREP  ElectronBot.GBL  ElectronBot.GBO  ElectronBot.GBP  ElectronBot.GBS  ElectronBot.GD1  ElectronBot.GG1  ElectronBot.GKO  ElectronBot.GM1  ElectronBot.GM10  ElectronBot.GM12  ElectronBot.GM13  ElectronBot.GM14  ElectronBot.GM15  ElectronBot.GPB  ElectronBot.GPT  ElectronBot.GTL  ElectronBot.GTO  ElectronBot.GTP  ElectronBot.GTS  ElectronBot.LDP  ElectronBot.REP  ElectronBot.RUL  ElectronBot.TXT  ElectronBot.apr  Status Report.Txt
1.Hardware/SensorBoard/: Main_ASCII.SchDoc  SensorBoard_ASCII.PcbDoc
1.Hardware/SensorBoard/Gerber/: Design Rule Check - SensorBoard.drc  Design Rule Check - SensorBoard.html  SensorBoard-macro.APR_LIB  SensorBoard.DRR  SensorBoard.EXTREP  SensorBoard.GBL  SensorBoard.GBO  SensorBoard.GBP  SensorBoard.GBS  SensorBoard.GD1  SensorBoard.GG1  SensorBoard.GKO  SensorBoard.GM1  SensorBoard.GM10  SensorBoard.GM13  SensorBoard.GM14  SensorBoard.GM15  SensorBoard.GPB  SensorBoard.GPT  SensorBoard.GTL  SensorBoard.GTO  SensorBoard.GTP  SensorBoard.GTS  SensorBoard.LDP  SensorBoard.REP  SensorBoard.RUL  SensorBoard.TXT  SensorBoard.apr  Status Report.Txt
1.Hardware/ServoDrive/: Main_ASCII.SchDoc  ServoDrive.PcbDoc.htm  ServoDrive_ASCII.PcbDoc
1.Hardware/ServoDrive-DK/: Main_ASCII.SchDoc  ServoDrive-DK_ASCII.PcbDoc
1.Hardware/ServoDrive-DK/Gerber/: ServoDrive-DK-macro.APR_LIB  ServoDrive-DK.DRR  ServoDrive-DK.EXTREP  ServoDrive-DK.GBL  ServoDrive-DK.GBO  ServoDrive-DK.GBP  ServoDrive-DK.GBS  ServoDrive-DK.GD1  ServoDrive-DK.GG1  ServoDrive-DK.GKO  ServoDrive-DK.GM1  ServoDrive-DK.GM10  ServoDrive-DK.GM13  ServoDrive-DK.GM14  ServoDrive-DK.GM15  ServoDrive-DK.GPB  ServoDrive-DK.GPT  ServoDrive-DK.GTL  ServoDrive-DK.GTO  ServoDrive-DK.GTP  ServoDrive-DK.GTS  ServoDrive-DK.LDP  ServoDrive-DK.REP  ServoDrive-DK.RUL  ServoDrive-DK.TXT  ServoDrive-DK.apr  Status Report.Txt
1.Hardware/ServoDrive/Gerber/: ServoDrive-macro.APR_LIB  ServoDrive.DRR  ServoDrive.EXTREP  ServoDrive.GBL  ServoDrive.GBO  ServoDrive.GBP  ServoDrive.GBS  ServoDrive.GD1  ServoDrive.GG1  ServoDrive.GKO  ServoDrive.GM1  ServoDrive.GM13  ServoDrive.GM14  ServoDrive.GM15  ServoDrive.GPB  ServoDrive.GPT  ServoDrive.GTL  ServoDrive.GTO  ServoDrive.GTP  ServoDrive.GTS  ServoDrive.LDP  ServoDrive.REP  ServoDrive.RUL  ServoDrive.TXT  ServoDrive.apr  Status Report.Txt
1.Hardware/网友提供采购BOM/: BaseConnector 2.xlsx  ElectronBot 2.xlsx  SensorBoard 2.xlsx  ServoDrive 12.xlsx  ServoDrive-DK 1.xlsx  汇总 Bom.xlsx
2.Firmware/ElectronBot-fw/Bsp/: robot.cpp  robot.h
2.Firmware/ElectronBot-fw/UserApp/: main.cpp
2.Firmware/ServoDrive-fw/: ServoDrive-fw.ioc  stlink.cfg
2.Firmware/ServoDrive-fw/Ctrl/: motor.cpp  motor.h
2.Firmware/ServoDrive-fw/UserApp/: configurations.h  main.cpp
3.Software/SDK/ElectronBotSDK-LowLevel/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-LowLevel/src/: electron_low_level.cpp  electron_low_level.h  sample.cpp
3.Software/SDK/ElectronBotSDK-Player/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-Player/src/: electron_player.cpp
3.Software/SDK/ElectronBotSDK-Player/src/lib/: ElectronBotSDK-Player.lib
3.Software/SDK/ElectronBotSDK-UnityBridge/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-UnityBridge/lib/: ElectronBotSDK-LowLevel.lib
3.Software/SDK/ElectronBotSDK-UnityBridge/src/: electron_sdk_unity_bridge.cpp
3.Software/_Tools/CP210x_Universal_Windows_Driver/: CP210x_Universal_Windows_Driver_ReleaseNotes.txt  silabser.cat  silabser.inf
3.Software/_Tools/CP210x_Universal_Windows_Driver/arm/: silabser.sys
3.Software/_Tools/CP210x_Universal_Windows_Driver/arm64/: silabser.sys
3.Software/_Tools/CP210x_Universal_Windows_Driver/x64/: silabser.sys
3.Software/_Tools/CP210x_Universal_Windows_Driver/x86/: silabser.sys
4.CAD-Model/3D打印/: 嘉立创打印列表.xlsx
4.CAD-Model/3D打印/嘉立创打印/: 头部前壳 v1.stl  头部后壳.STL  尼龙打印加工.stl  底座上盖.STL  底座下盖.STL  手臂打印加工.stl  身体前壳.STL  身体后壳_加厚-右 v2.stl  身体后壳_加厚-左 v2.stl
4.CAD-Model/Box_stl/: glass.step  glass.stl  glassboundary.stl
5.Docs/: PC交互协议.xlsx
6.Tests/ClionStudy/: 说明.txt
6.Tests/ClionStudy/1.clion_lib_static/: CMakeLists.txt
6.Tests/ClionStudy/1.clion_lib_static/module/: fun.cpp  (+1 more)
6.Tests/ClionStudy/2.clion_lib_shared/: CMakeLists.txt
6.Tests/ClionStudy/3.clion_lib_exe/: CMakeLists.txt
6.Tests/ClionStudy/3.clion_lib_exe/module/: module.cpp
6.Tests/ClionStudy/3.clion_lib_exe/src/: main.cpp
6.Tests/ClionStudy/4.clion_exe/: CMakeLists.txt
6.Tests/ClionStudy/4.clion_exe/lib/: module.h
6.Tests/ClionStudy/4.clion_exe/src/: main.cpp  main.h
6.Tests/ClionStudy/5.clion_opencv/: CMakeLists.txt  main.cpp
6.Tests/ClionStudy/6.python_call_cpp/6.4 clion_lib_shared/: CMakeLists.txt
6.Tests/ClionStudy/6.python_call_cpp/6.4 clion_lib_shared/module/: fun.cpp
6.Tests/ClionStudy/7.python_call_electron/7.1 ElectronBotSDK-LowLevel/: CMakeLists.txt
6.Tests/ClionStudy/7.python_call_electron/7.1 ElectronBotSDK-LowLevel/src/: electron_low_level.cpp  electron_low_level.h  sample.cpp
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/: CMakeLists.txt
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/src/: electron_low_level.cpp  sample.cpp
6.Tests/TestServo/ElectronBot-fw/: ElectronBot-fw.ioc
(+127 files in other folders)
